Entregable Práctica 1/tb3_ws/log/build_2025-01-31_13-14-13/amr_teleoperation/stderr.log
  File "/home/turtlebot/tb3_ws/install/amr_teleoperation/lib/python3.10/site-packages/amr_teleoperation/teleoperation_node.py", line 86
    stop_twist.linear.x *= 
                           ^
SyntaxError: invalid syntax

